GL-281 Leverage the IRepresentationRenderVariableCustomizer in UML Explorer
Bug: https://gitlab.eclipse.org/eclipse/papyrus/org.eclipse.papyrus-web/-/issues/281
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>